# JobPulse

./: .env.example  .gitignore  GUI_TIPS.md  IMPROVEMENTS.md  INSTALL.md  LICENSE  PUSH_TO_GITHUB.md  README.md  SECURITY.md  jobpulse.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run  run_gui
.github/workflows/: ci.yml
JobPulseMac/: .gitignore  Package.swift  README.md  make-app.sh  make-icon.sh
JobPulseMac/Icon/: AppIcon.icns  make-icon.swift
assets/: icon.icns  make_icon.py
scripts/: build_mac.sh  build_windows.bat  run_cron.sh  test_linkedin_dry_apply_url.py  test_linkedin_easy_apply_dry.py  test_linkedin_login.py
src/: __init__.py  alert_store.py  alerts.py  applied_store.py  apply_helper.py  browser_utils.py  captcha_solver.py  config.py  cover_letter.py  db.py  email_utils.py  form_filler.py  job_page_utils.py  job_utils.py  log.py  main.py  needs_review.py  runner.py
src/gui/: __init__.py  __main__.py  assets.py  env_io.py  main_window.py  output_formatter.py  run_history.py  themes.py
src/sites/: __init__.py  acbar.py  afghan_job_opportunities.py  afghanistan_ngo_jobs.py  base.py  ctg_global.py  da_afghanistan_bank.py  devex.py  hadaf.py  iarcsc.py  jobs_af.py  kabul_careers.py  kabul_jobs.py  linkedin_jobs.py  mof_afghanistan.py  netlinks.py  (+6 more)
tests/: conftest.py  test_acbar_extraction.py  test_applied_store.py  test_apply_contract.py  test_config_validation.py  test_cover_letter.py  test_form_confirmation.py  test_identity_and_alerts.py  test_job_utils.py  test_keyword_matching.py  test_needs_review.py  test_smtp_fallback.py
(+16 files in other folders)
